Tiny description fix

--- a/contrib/build.ubuntu-xenial/control
+++ b/contrib/build.ubuntu-xenial/control
@@ -4,6 +4,6 @@ Maintainer: Aspanta Limited <info@aspanta.com>
 Architecture: amd64
 Section: net
 Priority: optional
-Description: Emercoin SSH Authenticator for Ubuntu 16.04 LTS
+Description: Emercoin SSH Authenticator
 Depends: emercoin, pwgen, openssl, libcurl4-openssl-dev, libjansson-dev
 Build-Depends: libcurl4-openssl-dev libjansson-dev
