--- a/contrib/build.ubuntu-xenial/control
+++ b/contrib/build.ubuntu-xenial/control
@@ -6,4 +6,4 @@ Section: net
 Priority: optional
 Description: Emercoin SSH Authenticator
 Depends: emercoin, pwgen, openssl, libcurl4-openssl-dev, libjansson-dev
-Build-Depends: libcurl4-openssl-dev libjansson-dev
+Build-Depends: libcurl4-openssl-dev, libjansson-dev
