ubuntu 16.04 installation process fix

--- a/contrib/build.ubuntu-xenial/control
+++ b/contrib/build.ubuntu-xenial/control
@@ -5,5 +5,6 @@ Architecture: amd64
 Section: net
 Priority: optional
 Description: Emercoin SSH Authenticator
+Pre-Depends: debconf
 Depends: emercoin, pwgen, openssl, libcurl4-openssl-dev, libjansson-dev
 Build-Depends: libcurl4-openssl-dev, libjansson-dev
